--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Wahiba Bukhari | Assignment 1, Timers</title>
+    <title>Wahiba Bukhari | Assignment 2, Workout Queue</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
